[package]
name = "gcds"
version = "1.0.0"
description = "Efficient implementations of gcd algorithms"
authors = ["Hugo Sanz González <hugo@hgsg.me>"]
license = "MIT"
repository = "https://github.com/hsang/gcds"
keywords = ["gcd", "euclid", "binary", "stein", "brent"]
categories = ["algorithms", "mathematics", "no-std"]
readme = "README.md"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.8"
rand = "0.9"

[[bench]]
name = "benchmarks"
harness = false # `criterion` provides its own benchmark harness.

# Taken from https://docs.rs/rustdoc-katex-demo/latest/rustdoc_katex_demo/
# To build locally, run `RUSTDOCFLAGS="--html-in-header misc/katex-header.html" cargo doc --no-deps`.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "misc/katex-header.html"]
